--- a/House Regions.csproj
+++ b/House Regions.csproj
@@ -129,6 +129,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="LICENSE.txt" />
     <Content Include="tshock\House Regions\Config.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
