chore(publishing): add script to publish releases to GitHub
This repository is now using the GitHub releases feature to provide the plugin binaries.

--- a/House Regions.csproj
+++ b/House Regions.csproj
@@ -138,6 +138,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <None Include="publish.ps1" />
     <None Include="README.md" />
     <None Include="CONTRIBUTING.md" />
     <None Include="tshock\House Regions\Config.xsd">
