chore(GitVersion.yml): update gitversion configuration file format

--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -1,7 +1,8 @@
 mode: ContinuousDelivery
 branches: 
   pre:
-    tag: 'pre'
+    regex: 'pre'
+    source-branches: ['master']
 major-version-bump-message: 'BREAKING CHANGE'
 minor-version-bump-message: '^feat[(:]'
 patch-version-bump-message: '^fix[(:]'
